# fastapi-mvp

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml
examples/: main.py  mongo_example.py  s3_example.py
examples/app_settings_example/: main.py
examples/data/: models.py  settings.py
examples/load_env_example/: example.env  main.py  secrets.env
fastapi_mvp/: __init__.py  mvp.py
fastapi_mvp/metrics/: __init__.py  instrument.py  settings.py
fastapi_mvp/settings/: __init__.py  app_settings.py  env_settings.py  settings.py
fastapi_mvp/storage/mongo_storage/: __init__.py  manager.py  settings.py  storage.py
fastapi_mvp/storage/s3_storage/: __init__.py  settings.py  storage.py
src/core/: __init__.py  my_test.py
src/core/metrics/: __init__.py  instrument.py  settings.py
src/core/settings/: __init__.py
src/core/storage/: protocols.py
src/core/storage/mongo_storage/: __init__.py  manager.py  settings.py  storage.py
src/fastapi_mvp/: __init__.py  mvp.py
tests/: test_import.py
